# superstore

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  FAKE_DATA.md  MIGRATIONS.md  README_SEEDING.md  alembic.ini  ams_test.py  check_fake_data.py  classes.py  compress.py  compress_test.py  create_user.py  db.py  deploy.sh  docker-compose.yml  fake_data.py  hello.py  local_s3.py  main.py  metadata.py  migrate_and_seed.py  nomenclature.md  profiling.md  pyproject.toml  pytest.ini  run_test.py  s3.py  server.py  set_ops.py  sqlite_metadata.py  sqlite_version_repository.py  start.sh  sweep.py  sweep_test.py  test.db  test_fake_data.py  test_register_datasets.py  times.csv  (+3 more)
alembic/: README.md  env.py
alembic/versions/: 200d9744268f_replace_unique_constraint_with_partial_.py  4aee20fc87fb_initial_migration_create_base_tables.py  95474e057647_add_status_column_to_tables.py  c17f1101ab6d_add_status_column_to_tables.py
ams_scratch/: .gitignore  ams.db
data/: .gitignore
ops/: insert.py
repositories/: __init__.py  fake_version_repository.py  sqlite_version_repository.py  version_repository.py
research/: clustering.html  clustering.ipynb
src/: types.ts
tests/: ams_test.py  audit_log_items_test.py  conftest.py  creation_test.py  differential_test.py  differential_testing.py  partition_test.py  run_test.py  set_ops_test.py  sqlite_metadata_test.py  sweep_test.py  test_drop_table.py  test_register_datasets.py  test_table.py
tests/unit/set/: snapshot_test.py  version_loader_test.py  version_repository_test.py
