[project]
name = "blob-storage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datafusion>=46.0.0",
    "polars>=1.29.0",
    "pydantic>=2.11.4",
    "pytest-watch>=4.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "fastapi[standard]>=0.115.12",
]
